--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,12 +31,12 @@
 
     <TimePicker
         android:layout_width="260dp"
-        android:layout_height="157dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="492dp"
+        android:layout_height="89dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="140dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_save" />
 
     <TextView
         android:id="@+id/tv_message_current_time"
@@ -85,6 +85,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="28dp"
         android:text="09:00"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_start" />
 
@@ -104,6 +105,7 @@
         android:layout_marginStart="158dp"
         android:layout_marginTop="28dp"
         android:text="17:30"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/tv_start_time"
         app:layout_constraintTop_toBottomOf="@+id/bt_stop" />
 
@@ -116,5 +118,15 @@
         android:text="Save"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_current_time" />
+
+    <TextView
+        android:id="@+id/tv_save"
+        android:layout_width="215dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="96dp"
+        android:text="TextView"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="474dp" />
 
 </android.support.constraint.ConstraintLayout>
